--- a/cdk/package.json
+++ b/cdk/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "info": "IMPORTANT NOTE: Please make sure to replace the values inside the cdk.json with your configuration",
-    "bootstrap": "cdk bootstrap --app \"mvnw -e -q compile exec:java -Dexec.mainClass=dev.stratospheric.todoapp.cdk.BootstrapApp\"",
+    "bootstrap": "cdk bootstrap --app \"./mvnw -e -q compile exec:java -Dexec.mainClass=dev.stratospheric.todoapp.cdk.BootstrapApp\"",
     "certificate:deploy": "cdk deploy --app \"./mvnw -e -q compile exec:java -Dexec.mainClass=dev.stratospheric.todoapp.cdk.CertificateApp\" --require-approval never",
     "certificate:destroy": "cdk destroy --app \"./mvnw -e -q compile exec:java -Dexec.mainClass=dev.stratospheric.todoapp.cdk.CertificateApp\" --force --require-approval never",
     "network:deploy": "cdk deploy --app \"./mvnw -e -q compile exec:java -Dexec.mainClass=dev.stratospheric.todoapp.cdk.NetworkApp\" --require-approval never",
